HIL/src/objects/Education__c.object
<CustomObject>
    <description>Custom object to track education in context of a financial plan.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Prospect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client/Prospect</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Education</relationshipLabel>
        <relationshipName>Education</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>College_School__c</fullName>
        <label>College / School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Plan__c</fullName>
        <label>Financial Plan</label>
        <referenceTo>Financial_Plan__c</referenceTo>
        <relationshipLabel>Education</relationshipLabel>
        <relationshipName>Education</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Relationship_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Group</label>
        <referenceTo>Relationship_Group__c</referenceTo>
        <relationshipLabel>Education</relationshipLabel>
        <relationshipName>Education</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Year__c</fullName>
        <label>Start Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_of_Need__c</fullName>
        <label>Years of Need</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Education</label>
    <nameField>
        <label>Child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Education</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>